Make spinboxes in Crop tool behave properly with fixed aspect ratio

When the aspect ratio is fixed in the crop tool, if we change
the value of a spinbox, the other spinbox is set accordingly but
trigger a signal that change the value of the first spinbox.

This commit fixes that wrong behavior.

BUG: 332208
FIXED-IN: 22.08

Signed-off-by: Alban Boissard <albanboissard@gmail.com>